# versioncheck

./: .gitignore  MEMORY.md  README.md  check_versions.py  doc.md  pyproject.toml
.github/workflows/: release.yml
